rnsc/test_data/integration/error/parser/super_directive/multiple_definitions.rns
.class MyClass

.super firstClass
.super secondClass